modularized javascript / not using coors

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div id="overlay">
         <h1 id="status-msg">PAC-MAN</h1>
         <p id="win-reason"></p>
-        <button onclick="startGame()">START GAME</button>
+        <button>START GAME</button>
       </div>
     </div>
 
@@ -35,6 +35,13 @@
       <span class="leg-s">S:Titanium</span>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script/constants.js"></script>
+    <script src="script/utils.js"></script>
+    <script src="script/input.js"></script>
+    <script src="script/player.js"></script>
+    <script src="script/ghost.js"></script>
+    <script src="script/powerup.js"></script>
+    <script src="script/ui.js"></script>
+    <script src="script/main.js"></script>
   </body>
 </html>
