added a review button

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
         <h1 id="status-msg">PAC-MAN</h1>
         <p id="win-reason"></p>
         <button>START GAME</button>
+
+        <button
+          id="review-btn"
+          onclick="window.open('https://forms.gle/TRFZQC2XTZksePfm9', '_blank')"
+        >
+          REVIEW GAME
+        </button>
       </div>
     </div>
 
