--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
   </head>
   <body>
     <div id="game-ui">
-      <div class="stat-box">Lvl: <span id="level">1</span></div>
-      <div class="stat-box">Score: <span id="score">0</span></div>
-      <div class="stat-box" id="powerup-status">ACTIVE</div>
+      <div class="stat-box">
+        Lvl: <span id="level">1</span>
+        <span class="stat-border"></span>
+      </div>
+
+      <div class="stat-box">
+        Score: <span id="score">0</span>
+        <span class="stat-border"></span>
+      </div>
+
+      <div class="stat-box" id="powerup-status">
+        ACTIVE
+        <span class="stat-border"></span>
+      </div>
     </div>
 
     <div id="progress-container">
@@ -23,13 +34,19 @@
       <div id="overlay">
         <h1 id="status-msg">PAC-MAN</h1>
         <p id="win-reason"></p>
-        <button>START GAME</button>
+
+        <button class="button">
+          START GAME
+          <span class="button-border"></span>
+        </button>
 
         <button
           id="review-btn"
+          class="button"
           onclick="window.open('https://forms.gle/TRFZQC2XTZksePfm9', '_blank')"
         >
           REVIEW GAME
+          <span class="button-border"></span>
         </button>
       </div>
     </div>
