--- a/index.html
+++ b/index.html
@@ -35,18 +35,17 @@
         <h1 id="status-msg">PAC-MAN</h1>
         <p id="win-reason"></p>
 
-        <button class="button">
-          START GAME
-          <span class="button-border"></span>
-        </button>
+        <div class="wrapper">
+          <button id="start-btn">
+            <span>START GAME</span>
+          </button>
+        </div>
 
         <button
           id="review-btn"
-          class="button"
           onclick="window.open('https://forms.gle/TRFZQC2XTZksePfm9', '_blank')"
         >
           REVIEW GAME
-          <span class="button-border"></span>
         </button>
       </div>
     </div>
