added new powerups

--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
       <span class="leg-f">F:Freeze</span> | <span class="leg-p">P:Pyro</span> |
       <span class="leg-m">M:Magnet</span> |
       <span class="leg-t">T:Tornado</span> |
-      <span class="leg-s">S:Titanium</span>
+      <span class="leg-s">S:Titanium</span> |
+      <span class="leg-w">W:Slow</span> | <span class="leg-d">D:Drill</span> |
+      <span class="leg-b">B:Boost</span>
     </div>
-
     <script src="script/constants.js"></script>
     <script src="script/utils.js"></script>
     <script src="script/input.js"></script>
